crates/conduit-derive/tests/compile_fail/command_with_args.rs
use conduit_derive::command;

#[command(rename = "foo")]
fn handler() -> Vec<u8> {
    vec![]
}

fn main() {}
