crates/conduit-derive/tests/compile_fail/command_with_args.stderr
error: #[command] does not accept arguments
 --> tests/compile_fail/command_with_args.rs:3:1
  |
3 | #[command(rename = "foo")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `command` (in Nightly builds, run with -Z macro-backtrace for more info)
